--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aws-amplify/ui": "^3.8.0",
     "@aws-amplify/ui-angular": "^2.4.1",
     "aws-amplify": "^4.3.21",
+    "moment": "^2.29.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
